@@ -17,4 +17,11 @@
     <forum>http://forum.kodi.tv/showthread.php?tid=188839</forum>
     <disclaimer lang="en">This is a beta addon and may contain bugs or flawed code, please contact us via github project issues and help us fix the problem</disclaimer>
   </extension>
+  <extension
+    point="xbmc.addon.repository"
+    name="WIMM Add-on Repository">
+    <info compressed="true">http://kodi.neptune-one.net/addons/addons.xml</info>
+    <checksum>http://kodi.neptune-one.net/addons/addons.xml.md5</checksum>
+    <datadir zip="true">http://kodi.neptune-one.net/addons</datadir>
+  </extension>
 </addon>
